# mmck

./: CMakeLists.txt  launcher.c  mmck.h
.github/workflows/: workflow.yml
src/generator/: generator.c  generator.h
src/mpi/: mmck-mpi.c
src/utils/: distr.c  distr.h  matxutils.c  matxutils.h  misc.c
